# push_swap

./: .gitignore  CMakeLists.txt  Makefile  author  checker  main.c
inc/: color.h  ft_getline.h  ft_ssl.h  libft.h  push_swap.h
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_getline.c  ft_is_ascending_order.c  ft_is_descending_order.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_nbrlen.c  ft_nbrulen.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  (+37 more)
src/: check_array.c  checker.c  checking_values.c  cmd_a.c  cmd_b.c  cmd_both.c  command.c  command_a.c  command_b.c  do_a.c  do_b.c  do_both.c  instruction.c  instruction_a.c  instruction_b.c  operations.c  ps_check.c  ps_init.c  push_swap.c  sort_6.c  stack_tools.c  supporting_funcs.c  try_rotate.c  validation.c
